# gateway-rs

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: ci.yml
src/: main.rs
src/client/: gateway_manager.rs  mod.rs
src/handle/: mod.rs
src/handle_msg/: mod.rs
src/handle_msg/connect/: mod.rs  tcp.rs
src/handle_msg/service/: mdns.rs  mod.rs
src/init/: mod.rs
src/login/: login_conn.rs  mod.rs  work_conn.rs
src/models/: mod.rs  msg.rs  new_service.rs  token.rs  traits.rs
src/test/: mod.rs
src/utils/: mdns.rs  mod.rs
src/utils/msgio/: mod.rs
src/wifi/: mod.rs
