[package]
name = "gateway-rs"
version = "0.1.0"
authors = ["Yu Fang <yu@iotserv.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
#getrandom = { version = "0.2.3", git = "https://github.com/esp-rs-compat/getrandom.git" }
#getrandom1 = { version = "0.1", git = "https://github.com/esp-rs-compat/getrandom.git", package = "getrandom", branch = "0.1" }
embedded-io = { git = "https://github.com/ivmarkov/embedded-io" }
yamux = { git = "https://github.com/OpenIoTHub/rust-yamux" }
#rustix = { version = "0.37", git = "https://github.com/bytecodealliance/rustix.git" }
[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
pio = ["esp-idf-sys/pio"]
[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
url = "2"
smol = "1.2"
async-io = "=1.12"
async-std = "1.12.0"
socket2 = "0.4.4"
#polling = "2.1.0"
yamux = "0.11.0"
serde_json = "1.0.89"
serde = { version = "1.0.149", features = ["derive"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
bytes = "1.4.0"
futures = "0.3.26"
[target.'cfg(not(target_os = "espidf"))'.dependencies]
#mdns
madness = "0.1.0"
[target.'cfg(target_os = "espidf")'.dependencies]
getrandom = "0.2.8"
esp-idf-sys = { version = "0.33", features = ["binstart"] }
esp-idf-hal = "0.41"
esp-idf-svc = "0.46"
embedded-svc = "0.25"
embedded-hal = "0.2"
# embedded-graphics = "0.7"
# display-interface = "0.4"
# display-interface-spi = "0.4"
# mipidsi = "0.5"
# ssd1306 = "0.7"
# epd-waveshare = "0.5.0"


[build-dependencies]
embuild = { version = "0.31.2", features = ["elf"] }
anyhow = "1"
